JoraSFDC/src/objects/Physician__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Price__c</fullName>
        <label>Appointment Price</label>
        <picklist>
            <controllingField>Department__c</controllingField>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Acupuncture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiropractic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osteopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massage therapy</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Google_Calendar_Link__c</fullName>
        <label>Google Calendar Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Physician</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Appointment_Price__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Physician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>